[gd_scene load_steps=7 format=3 uid="uid://rkdnhqgf2hpj"]

[ext_resource type="Script" path="res://chicken.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://do5ppqlmowibo" path="res://art/chicken.png" id="2_2ld2f"]
[ext_resource type="Texture2D" uid="uid://8671e5b6wvt" path="res://art/chicken_tilted.png" id="3_p6lc2"]
[ext_resource type="AudioStream" uid="uid://ktnnfs6hjodk" path="res://art/chicken.wav" id="4_86nom"]

[sub_resource type="SpriteFrames" id="1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_2ld2f")
}, {
"duration": 1.0,
"texture": ExtResource("3_p6lc2")
}],
"loop": true,
"name": &"walk",
"speed": 4.0
}]

[sub_resource type="CapsuleShape2D" id="2"]
radius = 34.0
height = 96.0

[node name="Chicken" type="RigidBody2D" groups=["mobs"]]
collision_layer = 2
collision_mask = 5
gravity_scale = 0.0
script = ExtResource("1")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.75, 0.75)
sprite_frames = SubResource("1")
animation = &"walk"
autoplay = "walk"

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
scale = Vector2(4.7, 3.4)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
rotation = 1.5708
shape = SubResource("2")

[node name="ChickenCaughtSound" type="AudioStreamPlayer2D" parent="Area2D"]
stream = ExtResource("4_86nom")
volume_db = -6.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
